[STAPLES] Fixed a critical bug in which a decorative image of a binder was not overflowing outside its container as shown in the mocks.

--- a/sites/all/modules/dosomething/dosomething_campaign_styles/campaign_styles/2012/staples/ds_campaign.sass
+++ b/sites/all/modules/dosomething/dosomething_campaign_styles/campaign_styles/2012/staples/ds_campaign.sass
@@ -662,6 +662,13 @@ body.page-node-722266
     font-size: 0.9em
     color: #fff
   
+  .binders
+    position: absolute
+    top: 765px
+    left: 20px
+    z-index: 1
+
+  
   .gallery
     position: absolute
     top: 630px
